finished, including footer

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link href="https://use.fontawesome.com/releases/v5.0.7/css/all.css" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
@@ -60,12 +61,22 @@
   </body>
 
   <footer>
-    <div class="footer-wrap">
+    <div class="footer-top">
 
-      <div class="socials"><i class="fab fa-facebook-square"></i></div>
-        <div class="email"></div>
-        <div class="button"></div>
+      <div class="socials">
+        <i class="fab fa-facebook-square"></i>
+        <i class="fab fa-twitter-square"></i>
+        <i class="fab fa-instagram"></i>
+      </div>
+    </div>
 
+    <div class="footer-middle">
+      <input type="email" class="email" value="Email Address">
+      <button type="button" class="kit">Keep in touch</button>
+    </div>
+
+    <div class="footer-bottom">
+      <p> ©2016 Sarah Holden </p>
     </div>
   </footer>
 </html>
